# reMarkable-tablet-driver

./: .gitignore  CMakeLists.txt  Makefile  README.md  argp_test.c  argument_parser.c  argument_parser.h  ssh_test.c
.github/workflows/: cmake-single-platform.yml
src/: argument_parser.c  argument_parser.h  ssh.c  ssh.h  tabletDriver.c
